redesign customer and agent chat widget and frontend improvement